gccida/c1/check_operand_nalternatives
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_operand_nalternatives/src/stmt.c:2446:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_operand_nalternatives/src/stmt.c:2447:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_operand_nalternatives/src/stmt.c:2456:17: error: expected expression
if ( *( _OWORD *)&outputs != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_operand_nalternatives/src/stmt.c:2456:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&outputs != 0LL ) 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_operand_nalternatives/src/obj/stmt.o] Error 1
